# py-wwpdb_apps_msgmodule

./: .gitignore  Makefile  README.md  demo_real_system.py  pylintrc  pyproject.toml  quick_setup.sh  requirements-minimal.txt  requirements.txt  setup.py  tox.ini
scripts/: README  README.md  backend_config.py  dump_db_to_cif.py  init_messaging_database.py  list_recent_messages.py  makefile_utils.py  migrate_cif_to_db.py  test_messaging_backends.py  validate_integration.py  validate_phase2_integration.py
wwpdb/apps/msgmodule/: __init__.py
wwpdb/apps/msgmodule/db/: DataAccessLayer.py  LockFile.py  MessagingDataExport.py  MessagingDataImport.py  MessagingDb.py  Models.py  PdbxMessage.py  PdbxMessageCategoryStyle.py  PdbxMessageIo.py  __init__.py  config.py  message_bridge.py  messaging_dal.py
wwpdb/apps/msgmodule/depict/: MessagingDepict.py  MessagingTemplates.py  __init__.py
wwpdb/apps/msgmodule/io/: CompatIo.py  DateUtil.py  DbApiUtil.py  DbMessagingIo.py  EmHeaderUtils.py  HybridMessagingIo.py  MessagingDataExport.py  MessagingDataImport.py  MessagingDb.py  MessagingDualMode.py  MessagingFactory.py  MessagingIo.py  MessagingIoDatabase.py  StatusDbApi.py  __init__.py
wwpdb/apps/msgmodule/models/: DataModels.py  DatabaseModels.py  Message.py  ModelUtils.py  Models.py  (+1 more)
wwpdb/apps/tests-msgmodule/: DatabaseCifIntegrationTests.py  DatabaseIntegrationTests.py  DatabaseOperationsTests.py  DatabaseOperationsTests_old.py  DateUtilTest.py  DualModeTests.py  DumpMessagesTest.py  ExtractMessageTests.py  HybridOperationsTests.py  ImporterTests.py  InterfaceCompatibilityTests.py  MessagingBackendIntegrationTests.py  MessagingIoAdversarialTests.py  MessagingIoIntegrationTests.py  MessagingIoTests.py  PersistenceVerificationTests.py  RoundTripTests.py  SignatureTests.py  commonsetup.py  test_ExtractMessage.py
wwpdb/apps/tests-msgmodule-db/: DatabaseIntegrationTests.py  DumpMessagesTest.py  MessagingIoIntegrationTests.py  MessagingIoTests.py  PersistenceVerificationTests.py  RoundTripTests.py
(+30 files in other folders)
